fix(menu): Overflowing images due to media query

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -500,7 +500,7 @@ a {
     margin: 0 0 !important;
   }
 
-  img {
+  :root.home img {
     height: auto !important;
   }
 
